--- a/src/css/simu_1.css
+++ b/src/css/simu_1.css
@@ -1,8 +1,11 @@
 @import url(style.css);
 #game-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 80vh;
-  background-image: url(../images/fundo.jpg);
+  background-image: url(../images/fundo1.png);
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
@@ -11,7 +14,7 @@
 
 .game-object {
   color: white;
-  background-image: url(../images/tatu1.png);
+  background-image: url(../images/tatu5.png);
   width: 100px;
   height: 100px;
   background-repeat: no-repeat;
@@ -19,4 +22,33 @@
   position: absolute;
   bottom: 0px;
   left: 0px;
+}
+
+/* teste */
+.overlay {
+  top: 40%;
+  left: 10%;
+  max-width: 80%;
+  font-family: 'Lucida Console', sans-serif;
+  font-size: 24px;
+  position: absolute;
+  border: 1px solid #ccc;
+  padding: 20px;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.8);
+  display: none;
+}
+
+.overlay.active {
+  display: block;
+  animation: fadeIn 1.0s ease-in-out forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
