--- a/src/css/global.css
+++ b/src/css/global.css
@@ -54,5 +54,5 @@
   font-size: 20px;
   background-color: #212121;
   font-family: Arial, Helvetica, sans-serif;
-  color: white; /* pq essa color nao é aplicada as divs filhas? */
+  color: white;
 }
