--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,58 +1,17 @@
-#game-start {
-  text-align: center;
-  position: relative;
-  align-items: center;
-  justify-content: center;
-  justify-items: center;
-  height: 80vh;
-  background-image: url(../images/background_start.png);
+@import "../../node_modules/bootstrap/dist/css/bootstrap.css";
+
+#initial-screen {
+  background-image: url("../images/background_start.png");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: bottom;
-  animation: fadeIn 2s;
 }
 
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-#start-button {
-  position: absolute;
-  text-align: center;
-  top: 50%;
-  left: 50%;
+#start-button > button {
   background-color: #2b3425;
   color: #fff;
-  border-radius: 8px;
-  padding: 10px;
 }
 
-#start-button:hover {
+#start-button > button:hover {
   background-color: #5d5340;
   color: #fff;
-}
-
-.buttons {
-  margin-right: 15px;
-  text-align: right;
-}
-
-#inputs {
-  width: 200px;
-}
-
-.questions {
-  padding-top: 10px;
-  text-align: center;
-  align-items: center;
-  display: inline-block;
-  font-size: 20px;
-  background-color: #212121;
-  font-family: Arial, Helvetica, sans-serif;
-  color: white;
 }
