--- a/src/css/global.css
+++ b/src/css/global.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   justify-items: center;
-  height: 80vh;
+  height: 100vh;
   background-image: url(../images/background_start.png);
   background-repeat: no-repeat;
   background-size: cover;
@@ -38,21 +38,11 @@
 }
 
 .buttons {
-  margin-right: 15px;
-  text-align: right;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
 }
 
 #inputs {
   width: 200px;
-}
-
-.questions {
-  padding-top: 10px;
-  text-align: center;
-  align-items: center;
-  display: inline-block;
-  font-size: 20px;
-  background-color: #212121;
-  font-family: Arial, Helvetica, sans-serif;
-  color: white;
 }
