--- a/src/css/phaseThree.css
+++ b/src/css/phaseThree.css
@@ -5,20 +5,20 @@
   justify-content: center;
   align-items: center;
   width: 1260px;
-  height: 700px;
-  background-image: url(../images/fundoFase2.png);
+  height: 100vh;
+  background-image: url(../images/fundoFase3Dist.png);
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
   background-position: bottom;
 }
 
-.game-object {
+.tatu {
   color: white;
   font-size: 13px;
   background-image: url(../images/tatu4.png);
-  width: 80px;
-  height: 80px;
+  width: 20px;
+  height: 30px;
   background-repeat: no-repeat;
   background-size: cover;
   position: absolute;
@@ -26,11 +26,11 @@
   left: 0px;
 }
 
-.game-object2 {
+.raposa {
   color: white;
   background-image: url(../images/raposa.png);
-  width: 80px;
-  height: 80px;
+  width: 50px;
+  height: 40px;
   background-repeat: no-repeat;
   background-size: cover;
   position: absolute;
@@ -38,11 +38,11 @@
   left: 0px;
 }
 
-.game-object3 {
+.carro {
   color: white;
   background-image: url(../images/carro2.png);
-  width: 95px;
-  height: 200px;
+  width: 80px;
+  height: 120px;
   background-repeat: no-repeat;
   background-size: cover;
   position: absolute;
@@ -52,7 +52,7 @@
 
 .overlay {
   top: 40%;
-  left: 10%;
+  left: 50%;
   max-width: 80%;
   font-family: "Lucida Console", sans-serif;
   font-size: 24px;
@@ -90,4 +90,15 @@
   to {
     opacity: 1;
   }
+}
+
+#start_button_2 {
+  position: absolute;
+  text-align: center;
+  top: 40%;
+  left: 50%;
+  background-color: #2b3425;
+  color: #fff;
+  border-radius: 8px;
+  padding: 10px;
 }
