--- a/src/css/phaseThree.css
+++ b/src/css/phaseThree.css
@@ -4,9 +4,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 1260px;
-  height: 100vh;
-  background-image: url(../images/fundoFase3Dist.png);
+  width: 1200px;
+  height: 700px;
+  background-image: url(../images/fundo3.png);
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
@@ -17,24 +17,24 @@
   color: white;
   font-size: 13px;
   background-image: url(../images/tatu4.png);
-  width: 20px;
-  height: 30px;
+  width: 60px;
+  height: 60px;
   background-repeat: no-repeat;
   background-size: cover;
   position: absolute;
-  bottom: 250px;
+  bottom: 200px;
   left: 0px;
 }
 
 .raposa {
   color: white;
   background-image: url(../images/raposa.png);
-  width: 50px;
-  height: 40px;
+  width: 70px;
+  height: 70px;
   background-repeat: no-repeat;
   background-size: cover;
   position: absolute;
-  bottom: 250px;
+  bottom: 200px;
   left: 0px;
 }
 
@@ -42,12 +42,12 @@
   color: white;
   background-image: url(../images/carro2.png);
   width: 80px;
-  height: 120px;
+  height: 155px;
   background-repeat: no-repeat;
   background-size: cover;
   position: absolute;
-  bottom: 500px;
-  left: 920px;
+  bottom: 550px;
+  left: 940px;
 }
 
 .overlay {
