--- a/src/css/phase_two.css
+++ b/src/css/phase_two.css
@@ -1,144 +1,53 @@
 @import url(global.css);
 
-#game-start {
-  text-align: center;
-  position: relative;
-  align-items: center;
-  justify-content: center;
-  justify-items: center;
-  height: 100vh;
-  background-image: url(../images/background_start.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: bottom;
-  animation: fadeIn 2s;
-}
-
-#start-button {
-  position: absolute;
-  text-align: center;
-  top: 50%;
-  left: 50%;
-  background-color: #2b3425;
-  color: #fff;
-  border-radius: 8px;
-  padding: 10px;
-}
-
-#start-button:hover {
-  background-color: #5d5340;
-  color: #fff;
-}
-
-.buttons {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
-}
-
-#inputs {
-  width: 200px;
-}
-
 #game-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 1200px;
-  height: 700px;
   background-image: url(../images/fundo3.png);
   background-repeat: no-repeat;
   background-size: cover;
+
+  width: 1200px;
+  height: 520px;
+
   position: relative;
-  background-position: bottom;
 }
 
 .tatu {
   color: white;
-  font-size: 13px;
+
   background-image: url(../images/tatu4.png);
-  width: 60px;
-  height: 60px;
   background-repeat: no-repeat;
   background-size: cover;
+
+  width: 100px;
+  height: 100px;
+
   position: absolute;
-  bottom: 200px;
+  bottom: 0px;
   left: 0px;
+
+  transition: left 1s linear;
 }
 
 .raposa {
   color: white;
   background-image: url(../images/raposa.png);
-  width: 70px;
-  height: 70px;
   background-repeat: no-repeat;
   background-size: cover;
+
+  width: 100px;
+  height: 100px;
+
   position: absolute;
-  bottom: 200px;
-  left: 0px;
+  bottom: 0px;
+  left: -450px;
+
+  transition: left 1s linear;
 }
 
 .carro {
   color: white;
   background-image: url(../images/carro2.png);
-  width: 80px;
-  height: 155px;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: absolute;
-  bottom: 550px;
-  left: 940px;
-}
 
-.overlay {
-  top: 40%;
-  left: 50%;
-  max-width: 80%;
-  font-family: "Lucida Console", sans-serif;
-  font-size: 24px;
-  position: absolute;
-  border: 1px solid #ccc;
-  padding: 20px;
-  text-align: center;
-  background-color: rgba(255, 255, 255, 0.8);
-  display: none;
-}
-
-.overlay2 {
-  top: 40%;
-  left: 10%;
-  max-width: 80%;
-  font-family: "Lucida Console", sans-serif;
-  font-size: 24px;
-  position: absolute;
-  border: 1px solid #ccc;
-  padding: 20px;
-  text-align: center;
-  background-color: rgba(255, 255, 255, 0.8);
-  display: none;
-}
-
-.overlay.active {
-  display: block;
-  animation: fadeIn 1s ease-in-out forwards;
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-#start_button_2 {
-  position: absolute;
-  text-align: center;
-  top: 40%;
-  left: 50%;
-  background-color: #2b3425;
-  color: #fff;
-  border-radius: 8px;
-  padding: 10px;
+  width: 100px;
+  height: 100px;
 }
