--- a/src/css/phase_one.css
+++ b/src/css/phase_one.css
@@ -24,6 +24,8 @@
   position: absolute;
   bottom: 0px;
   left: 0px;
+
+  transition: left 1s linear;
 }
 
 .game-object2 {
@@ -37,7 +39,9 @@
 
   position: absolute;
   bottom: 0px;
-  left: -500px;
+  left: -450px;
+
+  transition: left 1s linear;
 }
 
 .overlay {
