--- a/src/css/phase_two.css
+++ b/src/css/phase_two.css
@@ -30,7 +30,7 @@
 
 .raposa {
   color: white;
-  background-image: url(../images/fox.png);
+  background-image: url(../images/fox_a.png);
   background-repeat: no-repeat;
   background-size: cover;
 
