--- a/src/css/phase_one.css
+++ b/src/css/phase_one.css
@@ -1,6 +1,6 @@
 @import url(bootstrap.css);
 
-#game-screen {
+.game-screen {
   background-image: url(../images/bg_game_one.png);
   background-position: bottom;
   background-repeat: no-repeat;
