--- a/src/css/phase_four.css
+++ b/src/css/phase_four.css
@@ -1,5 +1,9 @@
 @import url(bootstrap.css);
 
+#initial-screen {
+  z-index: 100;
+}
+
 .game-screen {
   background-image: url(../images/bg_game_one.png);
   background-position: bottom;
@@ -10,6 +14,7 @@
   height: 520px;
 
   position: relative;
+  opacity: 0.5;
 }
 
 .armadillo {
