--- a/src/css/phase_two.css
+++ b/src/css/phase_two.css
@@ -1,3 +1,7 @@
+#initial-screen {
+  z-index: 100;
+}
+
 .game-screen {
   width: 1200px;
   height: 520px;
@@ -5,10 +9,12 @@
   background-image: url(../images/bg-main.jpg);
   background-size: cover;
   background-position: bottom;
+
+  opacity: 0.5;
 }
 
 #armadillo {
-  animation: armadillo-animation 4s linear;
+  /* animation: armadillo-animation 4s linear; */
   background-image: url(../images/armadillog.gif);
 }
 
