--- a/src/css/phase_one.css
+++ b/src/css/phase_one.css
@@ -1,3 +1,7 @@
+#initial-screen {
+  z-index: 100;
+}
+
 .game-screen {
   width: 1200px;
   height: 520px;
@@ -5,16 +9,16 @@
   background-image: url(../images/bg-main.jpg);
   background-size: cover;
   background-position: bottom;
+
+  opacity: 0.5;
 }
 
 #armadilloMRU {
-  animation: armadillo-animation 4s linear;
   background-image: url(../images/armadillog.gif);
 }
 
 #armadilloMRUV {
   bottom: 25%;
-  animation: armadillo-animation 3s ease-in;
   background-image: url(../images/armadillog.gif);
 }
 
