novo bg na fase 4

--- a/src/css/phase_four.css
+++ b/src/css/phase_four.css
@@ -5,7 +5,7 @@
 }
 
 .game-screen {
-  background-image: url(../images/bg_game_one.png);
+  background-image: url(../images/bg-main.jpg);
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
