--- a/src/css/phase_three.css
+++ b/src/css/phase_three.css
@@ -37,3 +37,24 @@
     left: 1100px;
   }
 }
+
+@media screen and (max-width: 1024px) {
+  .game-screen {
+    width: 600px;
+    height: 300px;
+  }
+
+  .armadillo {
+    width: 80px;
+    height: 53px;
+  }
+
+  @keyframes armadillo-animation {
+    from {
+      left: 0px;
+    }
+    to {
+      left: calc(600px - 80px);
+    }
+  }
+}
