--- a/src/css/phase_02.css
+++ b/src/css/phase_02.css
@@ -25,8 +25,11 @@
   width: 120px;
   height: 80px;
 
-  bottom: 0px;
   left: 0px;
+}
+
+.object {
+  bottom: 0px;
 }
 
 @keyframes armadillo-animation {
@@ -47,6 +50,8 @@
   .armadillo {
     width: 80px;
     height: 55px;
+
+    font-size: 10px;
   }
 
   @keyframes armadillo-animation {
