--- a/src/css/phase_07.css
+++ b/src/css/phase_07.css
@@ -29,6 +29,10 @@
   left: 0px;
 }
 
+.object {
+  bottom: 0px;
+}
+
 @keyframes armadillo-animation {
   from {
     left: 0px;
@@ -44,13 +48,11 @@
     height: 300px;
   }
 
-  #question {
-    font-size: 1rem;
-  }
-
   .armadillo {
     width: 80px;
     height: 55px;
+
+    font-size: 10px;
   }
 
   @keyframes armadillo-animation {
