--- a/src/css/phase_04.css
+++ b/src/css/phase_04.css
@@ -72,6 +72,7 @@
 @media screen and (max-width: 1024px) {
   .game-screen {
     min-width: 600px;
+    max-width: 1023px;
     height: 300px;
   }
 
