novo design de personagens

--- a/src/css/phase_main.css
+++ b/src/css/phase_main.css
@@ -8,19 +8,19 @@
 }
 
 .fox {
-  background-image: url(../images/fox_a.png);
+  background-image: url(../images/fox-1.png);
   background-repeat: no-repeat;
   background-size: cover;
 
-  width: 120px;
-  height: 115px;
+  width: 114px;
+  height: 107px;
 
   left: 0px;
   bottom: 0px;
 }
 
 .foxIsMoving {
-  background-image: url(../images/foxg.gif);
+  background-image: url(../images/new-fox.gif);
 }
 
 #footer {
@@ -170,7 +170,7 @@
 
 @media screen and (max-width: 1024px) {
   #different-pos {
-    width: 38px;
+    width: 65px;
   }
 
   #end-position {
