--- a/src/css/mruv_phase.css
+++ b/src/css/mruv_phase.css
@@ -1,7 +1,7 @@
 @import url(global.css);
 
 #armadilloMRUV {
-  background-image: url(../images/armadillog.gif);
+  background-image: url(../images/new-armadillo.gif)
 }
 
 .is-bottom {
@@ -13,20 +13,20 @@
 }
 
 .armadilloMRUV {
-  background-image: url(../images/armadillo.svg);
+  background-image: url(../images/armadillo-1.png);
   background-repeat: no-repeat;
   background-size: cover;
 
-  width: 120px;
-  height: 80px;
+  width: 112px;
+  height: 110px;
 
   left: 0px;
 }
 
 @media screen and (max-width: 1024px) {
   .armadilloMRUV {
-    width: 80px;
-    height: 55px;
+    width: 75px;
+    height: 73px;
   }
 
   .object p,
