--- a/src/css/global.css
+++ b/src/css/global.css
@@ -6,7 +6,7 @@
   width: 1200px;
   height: 520px;
 
-  background-image: url(../images/bg-main.jpg);
+  background-image: url(../images/background.png);
   background-size: cover;
   background-position: bottom;
 
