correção de bugs

--- a/src/css/phase_main.css
+++ b/src/css/phase_main.css
@@ -52,8 +52,10 @@
 #footer {
   width: 1200px;
   position: relative;
+  visibility: hidden;
   left: -50px;
 }
+
 .balloon-text {
   display: flex;
   flex-direction: row;
